[project]
name = "slo-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "celery>=5.6.3",
  "django>=6.0.4",
  "django-environ>=0.13.0",
  "djangorestframework>=3.17.1",
  "psycopg>=3.3.3",
  "redis>=7.4.0",
]

[dependency-groups]
dev = [
  "mypy>=1.20.2",
  "pre-commit>=4.6.0",
  "pytest-django>=4.12.0",
  "ruff>=0.15.11",
]
